fix: layout overflow on smaller screens

--- a/custom-style-modern.scss
+++ b/custom-style-modern.scss
@@ -6,7 +6,7 @@
   --primary: #ffc16f;
   --secondary: rgba(218, 51, 0, 0.733);
   --text-color: white;
-  --banner-scroll-duration: 15s; /* Banner scroll speed, 0s to disable */
+  --banner-scroll-duration: 0s; /* Banner scroll speed, 0s to disable */
   --banner-image: url("");
   --banner-image-two: url(""); /* Second banner image to show if scroll enabled */
   --bg-image: url("");
@@ -109,6 +109,7 @@ a {
   top: 46px;
   left: 0;
   margin: unset;
+  height: var(--banner-height);
   width: 100%;
   overflow-x: clip;
 
@@ -129,7 +130,8 @@ a {
     position: relative;
     display: block;
     padding-top: unset;
-    width: 100%;
+    height: var(--banner-height);
+    width: auto;
   
     //* Banner img element
     #cover-image {
@@ -138,7 +140,7 @@ a {
       position: absolute;
       left: 100%;
       height: var(--banner-height);
-      width: 100%;
+      width: 100vw;
       max-width: 100%;
       background-image: var(--banner-image-two);
       background-size: cover;
@@ -154,7 +156,7 @@ a {
       left: 0;
       display: block;
       height: var(--banner-height);
-      width: 100%;
+      width: 100vw;
       background-image: var(--banner-image);
       background-size: cover;
       background-position: center;
@@ -168,7 +170,7 @@ a {
       left: 200%;
       display: block;
       height: var(--banner-height);
-      width: 100%;
+      width: 100vw;
       background-image: var(--banner-image);
       background-size: cover;
       background-position: center;
@@ -182,8 +184,9 @@ a {
   position: absolute;
   top: calc(var(--banner-height) - 90px);
   //* Position left aligned to table
-  left: calc((100vw - var(--table-width)) / 2 + 15px);
+  left: calc((100vw - var(--table-width)) / 2 + 20px);
   z-index: 5;
+  width: 350px;
 
   //* User details backdrop
   &::before {
@@ -333,7 +336,7 @@ a {
   display: flex;
   flex-wrap: wrap;
   border: none;
-  width: var(--table-width);
+  width: calc(var(--table-width) / 3);
   //* Fix for flex offset blocking clicks on profile image (set none for weird offset parent, then set back to all for children
   pointer-events: none;
 
@@ -486,13 +489,16 @@ a {
   position: fixed;
   top: 0;
   z-index: 50;
-  width: 100%;
+  width: 100vw;
+  width: 100dvw;
   border: none;
   background: var(--secondary) !important;
   box-shadow: 0 rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   transition: all 150ms;
+  white-space: nowrap;
+  overflow-x: auto;
 
   a {
     color: var(--text-color) !important;
@@ -527,6 +533,7 @@ a {
   .list-unit {
     margin: 0;
     width: var(--table-width);
+    max-width: 100%;
 
     .list-status-title {
       display: flex !important;
@@ -563,7 +570,6 @@ a {
     //* Actual list table styling
     .list-table {
       //* Increase table width
-      width: var(--table-width);
       display: block;
       padding: 0.25rem;
       border: 0 !important;
@@ -571,6 +577,7 @@ a {
       background-color: var(--bg-darker);
       backdrop-filter: blur(5px);
       -webkit-backdrop-filter: blur(5px);
+      overflow-x: auto;
 
       > * {
         border: 0;
@@ -638,6 +645,7 @@ a {
 
 //* Footer
 #footer-block {
+  width: auto !important;
   background-color: var(--secondary);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
 
@@ -654,6 +662,16 @@ a {
 
   * {
     color: var(--text-color) !important;
+  }
+}
+
+@media (max-width: 1250px) {
+  .list-menu-float {
+    left: calc((100vw - var(--table-width)) / 2 + 300px);
+  }
+
+  .header {
+    left: calc((100vw - var(--table-width)) / 2 + 285px);
   }
 }
 
